--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
     <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
         <!-- <div id="player"></div> -->
         <iframe id="player" class="youtube-player" type="text/html" width="640" height="385"
-        src="http://www.youtube.com/embed/bx5bN0U2MP4" frameborder="0">
-        </iframe>        
+        src="https://www.youtube.com/embed/bx5bN0U2MP4" frameborder="0">
+        </iframe>
   </div>
 </div>
 <pre id="response"></pre>
