--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 <div id="top9"><button id='vid9'>Watch Highlights</button></div>
 <div id="top10"><button id='vid10'>Watch Highlights</button></div>
 <div id="top11"><button id='vid11'>Watch Highlights</button></div>
-<a href="#ufc"><button id="backtosearch">Back to search</button></a>
+<a href="#ufc"><button onclick="document.getElementById('completeufc').style.display = 'none'" id="backtosearch">Back to search</button></a>
 </div>
+
 
 
 
